Improvement(js, styles): Get react-tables working properly

--- a/src/translations/pl_PL.json
+++ b/src/translations/pl_PL.json
@@ -1,1 +1,9 @@
-{"api.title":"Kontener Api","api.getusers":"Pobierz użytkowników","demo.title":"Kontener Demo","firebase.signin":"Zaloguj się za pomocą","demo.welcome":"Witaj, {name}!","home.title":"Kontener Home","home.demo":"Komponent Demo"}
+{
+  "api.title": "Kontener Api",
+  "api.getusers": "Pobierz użytkowników",
+  "demo.title": "Kontener Demo",
+  "firebase.signin": "Zaloguj się za pomocą",
+  "demo.welcome": "Witaj, {name}!",
+  "home.title": "Kontener Home",
+  "home.demo": "Komponent Demo"
+}
